gcc/testsuite/rust/rustc/ui/pub/pub-restricted-non-path.rs
#![feature(pub_restricted)]

pub (.) fn afn() {} // { dg-error "" "" { target *-*-* } }

fn main() {}

